ingress/grafana/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana
subsets:
- addresses:
  - ip: 192.168.122.51
  - ip: 192.168.122.52
  - ip: 192.168.122.53
  ports:
  - port: 32080
    protocol: TCP
